--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
 
   <p>Welcome to chart app</p>
 
+  <script src ="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    socket.on('connect',()=>{
+      console.log('connected to server');
+    });
+    socket.on('disconnect',()=>{
+      console.log('Discoonected from server');
+    });
+  </script>
+
 </body>
 
 
