--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,11 @@
   <p>Welcome to chart app</p>
 
   <script src ="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
+  <script src = "/js/index.js"></script>
 
-    socket.on('connect',()=>{
-      console.log('connected to server');
-    });
-    socket.on('disconnect',()=>{
-      console.log('Discoonected from server');
-    });
-  </script>
+
+
+
 
 </body>
 
